--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -12,7 +12,7 @@
 	<artifactId>eeecommerce</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>eeecommerce</name>
-	<description>E-Commerce app where we only sell things shaped like the letter ‘E’ or ‘e’</description>
+	<description>E-commerce site for E-shaped merch</description>
 	<url/>
 	<licenses>
 		<license/>
